Added some functional requirements

--- a/Documentation/Requirements/tex/functional_requirements.tex
+++ b/Documentation/Requirements/tex/functional_requirements.tex
@@ -16,21 +16,24 @@ The functional requirements for the game Bubble Bobble are listed using the \fnu
   	\item Monsters to play against.
   	\item The monsters need to be able to walk around randomly.
  	\item The ability to win the game.
+	\item When a monster touches the character, the character must die.
  	\item Game over screen when you die.
  	\item A field where the character can move around.
  	\item The character must be able to shoot bubbles.
  	\item When a monster is hit by a bubble, it must be caught in that bubble.
+	\item When a monster is caught in a bubble, it should die when the character jumps on the bubble. 
 \end{itemize}
 
 \section{Should Haves}
 
 \begin{itemize}
 \itemsep0em 
- \item A lives counter which decreases when a monster touches 
+ \item A lives counter which decreases when a monster touches the character.
  \item The player should be able to play a new game. 
- \item A score can be kept. 
+ \item A score should be kept. 
  \item The ability to stop / pause the game.
  \item The ability to restart the game.
+ \item The monster should drop pickups when they die which increases the score.
 \end{itemize}
 
 \section{Could Haves}
@@ -42,6 +45,7 @@ The functional requirements for the game Bubble Bobble are listed using the \fnu
   \item Animations in the game
   \item Music which plays for the different scenarios.  
   \item A list of all the previous scores.
+  \item Multiple powerups that makes the game more variable
 \end{itemize}
 
 \section{Would/Won't Haves}
@@ -49,4 +53,6 @@ The functional requirements for the game Bubble Bobble are listed using the \fnu
 \itemsep0em 
 	\item Multi player game
 	\item Changing the character, either through colour or form.
+	\item Coin based model for getting lives
+	\item No save system
 \end{itemize}
