--- a/Documentation/Requirements/tex/nonfunctional_requirements.tex
+++ b/Documentation/Requirements/tex/nonfunctional_requirements.tex
@@ -1,1 +1,11 @@
 \chapter{Non-Functional Requirements}
+
+Here all our non-functional requirements are listed. These include: 
+
+\begin{itemize}
+\itemsep0em
+	\item The game must be finished in 13 days.
+	\item We must be using SCRUM over these days.
+	\item A user should be able to understand the controls in less than a few minutes.
+	\item The game should be able to run on Windows, Mac and Linux.
+\end{itemize}
