Added nonfunctional requirements

--- a/Documentation/Requirements/tex/nonfunctional_requirements.tex
+++ b/Documentation/Requirements/tex/nonfunctional_requirements.tex
@@ -4,8 +4,10 @@ Here all our non-functional requirements are listed. These include:
 
 \begin{itemize}
 \itemsep0em
-	\item The game must be finished in 13 days.
-	\item We must be using SCRUM over these days.
+	\item A working version of the game must be delivered September 13th, 2015.
+	\item We will be using SCRUM over the iterations after the delivery.
 	\item A user should be able to understand the controls in less than a few minutes.
-	\item The game should be able to run on Windows, Mac and Linux.
+	\item The game should be able to run on Windows (7 or higher), Mac OS X (10.8 and higher) and Linux.
+	\item The game shall be implemented in Java. 
+	\item The working version we deliver will have at least 80\% line coverage, where the tests are meaningful. Meaningful means that they do not only execute functions, but actually tests the game.
 \end{itemize}
