Small change in functional requirements.

--- a/Documentation/Requirements/tex/functional_requirements.tex
+++ b/Documentation/Requirements/tex/functional_requirements.tex
@@ -42,7 +42,7 @@ The functional requirements for the game Bubble Bobble are listed using the \fnu
 \itemsep0em 
   \item Multiple levels to play the game on.
   \item The monsters can find the character, so are more likely to walk closer to the character.
-  \item Animations in the game
+  \item More animations in the game, better graphics.
   \item Music which plays for the different scenarios.  
   \item A list of all the previous scores.
   \item Multiple powerups that makes the game more variable
