Updated the requirements.

--- a/Documentation/Requirements/tex/functional_requirements.tex
+++ b/Documentation/Requirements/tex/functional_requirements.tex
@@ -2,15 +2,13 @@
 
 The functional requirements for the game Bubble Bobble are listed using the \fnurl{MoSCoW Model}{https://en.wikipedia.org/wiki/MoSCoW_method}, a model which separates the requirements based on their priorities.
 
-
-
 \section{Must Haves}
 
 \begin{itemize}
 \itemsep0em 
- 	\item A start up screen
-  	\item The ability to start a new game
-  	\item A single level to play the game on
+ 	\item A start up screen.
+  	\item The ability to start a new game.
+  	\item A single level to play the game on.
   	\item A character to play.
   	\item The character must be able to move around and jump.
   	\item Monsters to play against.
@@ -28,8 +26,7 @@ The functional requirements for the game Bubble Bobble are listed using the \fnu
 
 \begin{itemize}
 \itemsep0em 
- \item A lives counter which decreases when a monster touches the character.
- \item The player should be able to play a new game. 
+ \item A lives counter which decreases when a monster touches the character. 
  \item A score should be kept. 
  \item The ability to stop / pause the game.
  \item The ability to restart the game.
@@ -45,14 +42,15 @@ The functional requirements for the game Bubble Bobble are listed using the \fnu
   \item More animations in the game, better graphics.
   \item Music which plays for the different scenarios.  
   \item A list of all the previous scores.
-  \item Multiple powerups that makes the game more variable
+  \item Multiple powerups that makes the game more variable.
+  \item A help screen to explain the controls to the player.
 \end{itemize}
 
 \section{Would/Won't Haves}
 \begin{itemize}
 \itemsep0em 
-	\item Multi player game
+	\item Multiple players can play the game at the same time.
 	\item Changing the character, either through colour or form.
-	\item Coin based model for getting lives
-	\item No save system
+	\item Coin based model for getting lives.
+	\item No save system.
 \end{itemize}
