--- a/Documentation/Requirements/tex/nonfunctional_requirements.tex
+++ b/Documentation/Requirements/tex/nonfunctional_requirements.tex
@@ -1,13 +1,13 @@
 \chapter{Non-Functional Requirements}
 
-Here all our non-functional requirements are listed. These include: 
+The non-functional requirements are the requirements that are based on the operation of the system, instead of the functions and behaviour of the game itself.
 
 \begin{itemize}
 \itemsep0em
-	\item A working version of the game must be delivered September 13th, 2015.
-	\item We will be using SCRUM over the iterations after the delivery.
+	\item A working version of the game must be delivered September 11th, 2015.
+	\item SCRUM will be used for every iteration, after the original working version is delivered.
 	\item A user should be able to understand the controls in less than a few minutes.
 	\item The game should be able to run on Windows (7 or higher), Mac OS X (10.8 and higher) and Linux.
-	\item The game shall be implemented in Java. 
-	\item The working version we deliver will have at least 80\% line coverage, where the tests are meaningful. Meaningful means that they do not only execute functions, but actually tests the game.
+	\item The game will be implemented in Java. 
+	\item The working version delivered will have at least 80\% line coverage, where the tests are meaningful. Meaningful means that they do not only execute functions, but actually test the game.
 \end{itemize}
