Edited the requirements

--- a/Documentation/Requirements/tex/functional_requirements.tex
+++ b/Documentation/Requirements/tex/functional_requirements.tex
@@ -6,51 +6,56 @@ The functional requirements for the game Bubble Bobble are listed using the \fnu
 
 \begin{itemize}
 \itemsep0em 
- 	\item A start up screen.
-  	\item The ability to start a new game.
-  	\item A single level to play the game on.
-  	\item A character to play.
+ 	\item A start up screen is shown when the game starts.
+  	\item The startup screen has the ability to start a new game.
+  	\item The game has a single level to play the game on.
+  	\item This level shall show a board with a few monsters and a character to play with.
   	\item The character must be able to move around and jump.
-  	\item Monsters to play against.
   	\item The monsters need to be able to walk around randomly.
- 	\item The ability to win the game.
-	\item When a monster touches the character, the character must die.
- 	\item Game over screen when you die.
- 	\item A field where the character can move around.
- 	\item The character must be able to shoot bubbles.
- 	\item When a monster is hit by a bubble, it must be caught in that bubble.
-	\item When a monster is caught in a bubble, it should die when the character jumps on the bubble. 
+ 	\item The player has the ability to win the game.
+ 	\itme The game is won when all the monsters are dead.
+ 	\item The player loses when a monster touches the character.
+ 	\item The game shall show a game over schreen when the player dies.
+ 	\item The game shall have a field where the character and monsters can move around.
+ 	\item The character shall be able to shoot bubbles.
+ 	\item The monster shall be caught by a bubble, when the monster is hit by a bubble.
+ 	\item The monster shall die, when the monster is caught by a bubble and the character jumps on the bubble
 \end{itemize}
 
 \section{Should Haves}
 
 \begin{itemize}
 \itemsep0em 
- \item A lives counter which decreases when a monster touches the character. 
- \item A score should be kept. 
- \item The ability to stop / pause the game.
- \item The ability to restart the game.
- \item The monster should drop pickups when they die which increases the score.
+ \item The player shall have multiple lives.
+ \item The player shall lose a live, when a monster touches the character. 
+ \item The game shall keep a score counter.
+ \item The game shall have the ability to stop / pause the game. 
+ \item The game shall have the ability to restart the game.
+ \item The monsters shall be able to drop pickups when they die.
+ \item The pickups shall increase the players score.
 \end{itemize}
 
 \section{Could Haves}
 
 \begin{itemize}
 \itemsep0em 
-  \item Multiple levels to play the game on.
+  \item The game shall have multiple levels to play on.
   \item The monsters can find the character, so are more likely to walk closer to the character.
-  \item More animations in the game, better graphics.
-  \item Music which plays for the different scenarios.  
-  \item A list of all the previous scores.
-  \item Multiple powerups that makes the game more variable.
-  \item A help screen to explain the controls to the player.
+  \item The monsters and character shall have smooth animations, better graphics.
+  \item The game shall have a theme music for different scenarios.
+  \item The game shall keep a list of previous scores.
+  \item The monsters shall be able to drop powerups when they die.
+  \item The powerups shall increase, the speed of the bubble, the distance the bubble travels or the walking speed of the character.
+  \item the game shall have a help screen.
+  \item the help screen shall inform the player about the controls and powerups.
 \end{itemize}
 
 \section{Would/Won't Haves}
 \begin{itemize}
 \itemsep0em 
-	\item Multiple players can play the game at the same time.
-	\item Changing the character, either through colour or form.
-	\item Coin based model for getting lives.
-	\item No save system.
+	\item The game shall be able to be played with multiple players.
+	\item The player shall have the ability to change the colour or form of the character.
+	\item The player shall be able to change the background of the game.
+	\item The game shall have a coin based model to get more lives.
+	\item The player shall have the ability to save the game.
 \end{itemize}
