--- a/Documentation/Requirements/tex/titel.tex
+++ b/Documentation/Requirements/tex/titel.tex
@@ -29,16 +29,12 @@ Matthijs Verzijl - 4282604\\
 Emilie de Bree - 4247558\\
 Jim Hommes - 4306090\\
 Toine Hartman - 4305655\\
-Jeffrey Helgers - 4318749\\
-% Meerdere authors
-\end{flushleft}
-\end{minipage}
-~
-\begin{minipage}{0.4\textwidth}
-%\begin{flushright} \large
-%\emph{Supervisor:} \\
-%A. \textsc{Hansbergen} % Supervisor's Name
-%\end{flushright}
+Jeffrey Helgers - 4318749\\\\
+\emph{Supervisor:} \\
+Alberto Bacchelli\\\\
+\emph{Teaching Assistant:} \\
+Aaron Ang\\
+\end{flushright}
 \end{minipage}\\[7cm]
 
 
