--- a/Documentation/Requirements/tex/functional_requirements.tex
+++ b/Documentation/Requirements/tex/functional_requirements.tex
@@ -8,18 +8,17 @@ The functional requirements for the game Bubble Bobble are listed using the \fnu
 \itemsep0em 
  	\item The game shall have a start up screen.
   	\item The player shall have the ability to start a new game.
-  	\item The game has a single level to play the game on.
-  	\item The game shall have one level to play the game on.
+  	\item The game shall have a single level to play the game on.
   	\item The player's character must be able to move around horizontally.
-  	\item The player's character must be able to jump.
-  	\item The monsters will walk around vertically, and when they hit a wall they will change direction. 
- 	\item The player has the ability to win the game when they have killed all the monsters.
- 	\item The player loses the game when a monster touches the character.
+  	\item The player's character must be able to jump, both straight up and diagnoally.
+  	\item The monsters shall walk around horizonatally, and when they hit a wall they will change direction. 
+ 	\item The player shall have the ability to win the game when they have killed all the monsters.
+ 	\item The player shall lose the game when a monster touches the character.
  	\item The game shall show a game over screen when the player dies.
  	\item The game shall have a field where the character and monsters can move around.
  	\item The player's character shall be able to shoot bubbles.
- 	\item The monster shall be caught by a bubble when it is hit by a bubble.
- 	\item The monster shall die when it is caught in a bubble and the character collides with the bubble.
+ 	\item The monster shall be trapped in a bubble when the player shoots a bubble at it.
+ 	\item The monster shall die when it is caught in a bubble and the character collides with that bubble.
 \end{itemize}
 
 \section{Should Haves}
@@ -27,14 +26,16 @@ The functional requirements for the game Bubble Bobble are listed using the \fnu
 \begin{itemize}
 \itemsep0em 
  \item The player shall have multiple lives.
- \item The player shall lose a live, when a monster touches the character. 
+ \item The player shall lose a life, when a monster touches the character. 
  \item The game shall keep a track of the player's score.
  \item The game shall have the ability to pause.
  \item The game shall have the ability to unpause after the pause button have been pressed.
  \item The game shall have the ability to stop, which closes the game.
  \item The game shall have the ability to restart, which will return the game to it's original state.
  \item The monsters shall be able to drop pickups when they die.
- \item The player has the ability to pick up pickups shall increase their score.
+ \item The player shall have the ability to pick up pickups which will increase their score.
+ \item The powerups shall increase the speed of the bubble, the distance the bubble travels or the walking speed of the character.
+ \item The game shall have a help screen that will inform the player about the controls and powerups.
 \end{itemize}
 
 \section{Could Haves}
@@ -48,10 +49,6 @@ The functional requirements for the game Bubble Bobble are listed using the \fnu
   \item The game shall play a different song when the player dies.
   \item The game shall play a third song when the level is won.
   \item The game shall keep a list of previous scores.
-  \item The monsters shall be able to drop powerups when they die.
-  \item The powerups shall increase, the speed of the bubble, the distance the bubble travels or the walking speed of the character.
-  \item the game shall have a help screen.
-  \item the help screen shall inform the player about the controls and powerups.
 \end{itemize}
 
 \section{Would/Won't Haves}
