--- a/Documentation/Requirements/tex/functional_requirements.tex
+++ b/Documentation/Requirements/tex/functional_requirements.tex
@@ -7,56 +7,56 @@ The functional requirements for the game Bubble Bobble are listed using the \fnu
 \begin{itemize}
 \itemsep0em 
  	\item The game shall have a start up screen.
-  	\item The player shall have the ability to start a new game.
   	\item The game shall have a single level to play the game on.
+  	\item The game shall show a game over screen when the player dies.
+ 	\item The game shall have a field where the character and monsters can move around.
+  	\item The player shall have the ability to win the game when they have killed all the monsters.
+ 	\item The player shall lose the game when a monster touches the character.
+ 	\item The player shall have the ability to start a new game.	
   	\item The player's character must be able to move around horizontally.
   	\item The player's character must be able to jump, both straight up and diagnoally.
+  	\item The player's character shall be able to shoot bubbles.
   	\item The monsters shall walk around horizonatally, and when they hit a wall they will change direction. 
- 	\item The player shall have the ability to win the game when they have killed all the monsters.
- 	\item The player shall lose the game when a monster touches the character.
- 	\item The game shall show a game over screen when the player dies.
- 	\item The game shall have a field where the character and monsters can move around.
- 	\item The player's character shall be able to shoot bubbles.
- 	\item The monster shall be trapped in a bubble when the player shoots a bubble at it.
- 	\item The monster shall die when it is caught in a bubble and the character collides with that bubble.
+ 	\item A monster shall be trapped in a bubble when the player shoots a bubble at it.
+ 	\item A monsters shall die when it is caught in a bubble and the character collides with that bubble.
 \end{itemize}
 
 \section{Should Haves}
 
 \begin{itemize}
 \itemsep0em 
- \item The player shall have multiple lives.
- \item The player shall lose a life, when a monster touches the character. 
- \item The game shall keep a track of the player's score.
- \item The game shall have the ability to pause.
- \item The game shall have the ability to unpause after the pause button have been pressed.
- \item The game shall have the ability to stop, which closes the game.
- \item The game shall have the ability to restart, which will return the game to it's original state.
- \item The monsters shall be able to drop pickups when they die.
- \item The player shall have the ability to pick up pickups which will increase their score.
- \item The powerups shall increase the speed of the bubble, the distance the bubble travels or the walking speed of the character.
- \item The game shall have a help screen that will inform the player about the controls and powerups.
+	 \item The game shall keep a track of the player's score.
+	 \item The game shall have the ability to pause.
+	 \item The game shall have the ability to unpause after the pause button have been pressed.
+	 \item The game shall have the ability to stop, which closes the game.
+	 \item The game shall have the ability to restart, which will return the game to it's original state.
+	 \item The game shall have a help screen that will inform the player about the controls and powerups.
+	 \item The player shall have multiple lives.
+	 \item The player shall lose a life, when a monster touches the character. 
+	 \item The player shall have the ability to pick up pickups which will increase their score.
+	 \item The monsters shall be able to drop pickups when they die.
+	 \item The powerups shall increase the speed of the bubble, the distance the bubble travels or the walking speed of the character.
 \end{itemize}
 
 \section{Could Haves}
 
 \begin{itemize}
 \itemsep0em 
-  \item The game shall have multiple levels to play on.
-  \item The monsters can find the character, so are more likely to walk closer to the character.
-  \item The monsters and character shall have the ability to be animated.
-  \item The game shall play a theme song when the player is player.
-  \item The game shall play a different song when the player dies.
-  \item The game shall play a third song when the level is won.
-  \item The game shall keep a list of previous scores.
+	  \item The game shall have multiple levels to play on.
+	  \item The game shall play a theme song when the player is playing the game.
+	  \item The game shall play a different song when the player dies.
+	  \item The game shall play a third song when the level is won.
+	  \item The game shall keep a list of previous scores.
+	  \item The monsters shall have the ability know where the character is, therefore will walk closer to the character.
+	  \item The monsters and character shall have the ability to be animated.
 \end{itemize}
 
 \section{Would/Won't Haves}
 \begin{itemize}
 \itemsep0em 
 	\item The game shall be able to be played with multiple players.
+	\item The game shall have a coin based model to get more lives.
 	\item The player shall have the ability to change the colour or form of the character.
 	\item The player shall be able to change the background of the game.
-	\item The game shall have a coin based model to get more lives.
 	\item The player shall have the ability to save the game.
 \end{itemize}
