--- a/Documentation/Requirements/tex/titel.tex
+++ b/Documentation/Requirements/tex/titel.tex
@@ -24,22 +24,19 @@
 
 \begin{minipage}{0.5\textwidth}
 \begin{flushleft} \large
-\emph{Authors:}\\     
+\textbf{\emph{Authors:}}\\     
 Matthijs Verzijl - 4282604\\
 Emilie de Bree - 4247558\\
 Jim Hommes - 4306090\\
 Toine Hartman - 4305655\\
 Jeffrey Helgers - 4318749\\
-% Meerdere authors
+\textbf{\emph{Supervisor:}} \\
+Alberto Bacchelli\\
+\textbf{\emph{Teaching Assistant:}} \\
+Aaron Ang\\
 \end{flushleft}
-\end{minipage}
-~
-\begin{minipage}{0.4\textwidth}
-%\begin{flushright} \large
-%\emph{Supervisor:} \\
-%A. \textsc{Hansbergen} % Supervisor's Name
-%\end{flushright}
-\end{minipage}\\[7cm]
+\end{minipage}\\[5cm]
+
 
 
 %----------------------------------------------------------------------------------------
