Addede the latex file for assignment 1.

--- a/Documentation/Assignment 1/tex/titel.tex
+++ b/Documentation/Assignment 1/tex/titel.tex
@@ -15,7 +15,7 @@
 %----------------------------------------------------------------------------------------
 
 \HRule \\[0.4cm]
-{ \huge \bfseries Bubble Bobble Requirements}\\[0.4cm] % Title of your document
+{ \huge \bfseries Assignment 1}\\[0.4cm] % Title of your document
 \HRule \\[4cm]
  
 %----------------------------------------------------------------------------------------
@@ -33,7 +33,7 @@ Jeffrey Helgers - 4318749 \\\\
 Alberto Bacchelli \\\\
 \emph{Teaching Assistant:} \\
 Aaron Ang\\
-\end{minipage}\\[7cm]
+\end{minipage}\\[4cm]
 
 
 %----------------------------------------------------------------------------------------
