--- a/Documentation/Assignment 1/tex/core_2.tex
+++ b/Documentation/Assignment 1/tex/core_2.tex
@@ -1,1 +1,63 @@
 \chapter{The Core: Question 2}
+
+``Following the Responsibility Driven Design, describe the main classes you implemented in your project in terms of responsibilities and collaborations''
+
+\subsubsection{Level}
+Responsibilities: \\
+The Level-class is responsible for constructing the level a customer plays. A level has to be created from loading a text-file in which is defined where to place the walls and the monsters. \\
+Collaborations: \\
+The Level-class collaborates with the Wall-class as well as the Monster-class. 
+
+\subsubsection{Wall}
+Responsibilities: \\
+The Wall-class represents a piece of wall in the game. \\
+Collaborations: \\
+As a part of the screen it collaborates with SpriteBase to have standard attributes as x,y coordinates. 
+
+\subsubsection{SpriteBase}
+Responsibilities: \\
+Every element in Level has certain standard attributes such as an x,y coordinate, but also the speed in every direction and an image. All of these attributes are defined in SpriteBase. \\
+Collaborations: \\
+Spritebase is the superclass for every element in the screen (such as Player, Monster, Wall and Bubble)
+
+\subsubsection{GravityObject}
+Responsibility: \\
+The GravityObject class is responsible for the gravity, which is attached to all moving objects in a Level. \\
+Collaborations: \\
+The GravityObject class works together with SpriteBase and because of that adds gravity to all moving objects. 
+
+\subsubsection{Player}
+Responsibilities: \\
+The Player class displays the sprite which moves over the screen. It can move left and right, as well as it has the ability to jump. When touched by a monster, the Player dies. In return the Player has the ability to shoot bubbles in which it can catch a Monster and by doing that, kill the monster. \\
+Collaborations: \\
+The Player class collaborates with the Level since it is a part of it. It also collaborates with the Monster because it wants to catch it, and because it has certain coordinates in the Level, it also collaborates with SpriteBase. Furthermore the Player can move, which is performed by the Input class. 
+
+\subsubsection{Monster}
+Responsibilities: \\
+The Monster class represents an image of a monster, which moves over the screen and when touched by Player, the player dies. When a monsters touches a wall it changes direction. \\
+Collaborations: \\
+The Monster class collaborates with the SpriteBase class, but also works together with the Player. During every loop, we have to check whether the Player collided with a monster. Furthermore the Monster of course collaborates with the Level, since it is an important part of it. 
+
+\subsubsection{Walker}
+Responsibilities: \\
+Monsters can come in different forms, one of them is the Walker. This is the standard Monster which walks over the screen over the available platforms. When it touches the Player, the player dies. \\
+Collaborations: \\
+The Walker class collaborates with the Monster class. Furthermore it also works together with the Player and the Level. 
+
+\subsubsection{Input}
+Responsibilities: \\
+The Input class catches all input performed by the customer. The class makes sure that when a customer presses one of the keys allowed the desired action is performed and when the key is released the action stops. \\
+Collaborations: \\
+The only object which can be moved by the customer is the Player class. Therefor this is the only class with which the Input class collaborates. 
+
+\subsubsection{Bubble}
+Responsibilities: \\
+The Bubble class is able to catch a monster and kill it. Bubbles are being shot by the Player. \\
+Collaborations: \\
+Bubbles are being shot by a Player and are able to catch Monsters. Therefor it collaborates with both these classes. 
+
+\subsubsection{Settings}
+Responsibilities: \\
+Store certain settings from the game, for example movement speed and screen size. \\
+Collaborations: \\
+This collaborates with all classes, since it hosts settings which are used in all classes. 
