updated Exercise 1.1 and 1.2 with LevelController

--- a/Documentation/Assignment 1/tex/core_2.tex
+++ b/Documentation/Assignment 1/tex/core_2.tex
@@ -1,6 +1,11 @@
-\chapter{The Core: Question 2}
-
+\subsection{Exercise 1.2}
 ``Following the Responsibility Driven Design, describe the main classes you implemented in your project in terms of responsibilities and collaborations''
+
+\subsubsection{LevelController}
+Responsibilities: \\
+The LevelController-class is responsible for handling interaction between a Level and Players. It is also runs the gameLoop which renders the game every frame. Therefor it is also able to pause the game, win a game and go to a next Level. \\
+Collaborations: \\
+The LevelController-class collaborates with a Level and the Players. 
 
 \subsubsection{Level}
 Responsibilities: \\
