--- a/Documentation/Assignment 1/tex/core_1.tex
+++ b/Documentation/Assignment 1/tex/core_1.tex
@@ -1,37 +1,38 @@
-\chapter{The Core: Question 1}
+\subsection{Exercise 1.1}
 
 ``Following the Responsibility Driven Design, start from your requirements (without considering your implementation) and derive classes, responsibilities, and collaborations (use CRC cards). Describe each step you make. Compare the result with your actual implementation and discuss any difference (e.g., additional and missing classes).'' \\
 
 As a recap we will start by providing our requirements: \\
 \begin{itemize}
-  	\item The game shall have a single level to play.
-  	\item The game shall show a game over screen when the player dies.
- 	\item The game shall have a field where the character and monsters can move around.
-  	\item The player shall have the ability to win the game when they have killed all the monsters.
- 	\item The player shall lose the game when a monster touches the character.
-  	\item The player's character must be able to move around horizontally.
-  	\item The player's character must be able to jump, both straight up and diagonally.
-  	\item The player's character shall be able to shoot bubbles.
-  	\item The monsters shall walk around horizontally, and when they hit a wall they will change direction. 
- 	\item A monster shall be trapped in a bubble when the player shoots a bubble at it.
- 	\item A monsters shall die when it is caught in a bubble and the character collides with that bubble.
- 	 \item The game shall have a start up screen.
-	 \item The game shall have multiple levels to play on.
-	 \item The game shall keep a track of the player's score.
-	 \item The game shall have the ability to pause.
-	 \item The game shall have the ability to unpause after the pause button have been pressed.
-	 \item The game shall have the ability to stop, which closes the game.
-	 \item The game shall have a help screen that will inform the player about the controls and powerups.
-	 \item The player shall have the ability to start a new game.
-	 \item The player shall have multiple lives.
-	 \item The player shall lose a life, when a monster touches the character. 
-	 \item The monsters shall be able to drop items when they die.
-	 \item The player shall have the ability to pick up items which will increase their score.
-	 \item The powerups shall increase the speed of the bubble, the distance the bubble travels or the walking speed of the character.
+    \item The game shall have a single level to play.
+    \item The game shall show a game over screen when the player dies.
+  \item The game shall have a field where the character and monsters can move around.
+    \item The player shall have the ability to win the game when they have killed all the monsters.
+  \item The player shall lose the game when a monster touches the character.
+    \item The player's character must be able to move around horizontally.
+    \item The player's character must be able to jump, both straight up and diagonally.
+    \item The player's character shall be able to shoot bubbles.
+    \item The monsters shall walk around horizontally, and when they hit a wall they will change direction. 
+  \item A monster shall be trapped in a bubble when the player shoots a bubble at it.
+  \item A monsters shall die when it is caught in a bubble and the character collides with that bubble.
+   \item The game shall have a start up screen.
+   \item The game shall have multiple levels to play on.
+   \item The game shall keep a track of the player's score.
+   \item The game shall have the ability to pause.
+   \item The game shall have the ability to unpause after the pause button have been pressed.
+   \item The game shall have the ability to stop, which closes the game.
+   \item The game shall have a help screen that will inform the player about the controls and powerups.
+   \item The player shall have the ability to start a new game.
+   \item The player shall have multiple lives.
+   \item The player shall lose a life, when a monster touches the character. 
+   \item The monsters shall be able to drop items when they die.
+   \item The player shall have the ability to pick up items which will increase their score.
+   \item The powerups shall increase the speed of the bubble, the distance the bubble travels or the walking speed of the character.
 \end{itemize}
 
 Next step is to derive all necessary classes from the requirements. Useful to do this is by selecting every noun in the requirements. 
 \begin{itemize}
+    \item LevelController
     \item Level
     \item Wall
     \item Character
@@ -47,10 +48,25 @@ Since we now have all classes present, we can start constructing our CRC cards
 
 \begin{table}[]
 \centering
+\label{crc_levelcontroller}
+\begin{tabular}{|l|l|}
+\hline
+\multicolumn{2}{|l|}{LevelController} \\ \hline
+\multicolumn{2}{|l|}{Superclass(es):} \\ \hline
+\multicolumn{2}{|l|}{Subclass(es): Level, Player} \\ \hline
+createLvl               & Level \\ \hline
+createPlayer            & Player \\ \hline
+startLvl                & Level \\ \hline
+winLvl                  & Level \\ \hline
+\end{tabular}
+\caption{CRC card: LevelController}
+\end{table}
+
+\begin{table}[]
+\centering
 \label{crc_level}
 \begin{tabular}{|l|l|}
 \hline
-
 \multicolumn{2}{|l|}{Level} \\ \hline
 \multicolumn{2}{|l|}{Superclass(es):} \\ \hline
 \multicolumn{2}{|l|}{Subclass(es): Wall} \\ \hline
