Exercise 1.3 spelling check

--- a/Documentation/Assignment 1/tex/core_3.tex
+++ b/Documentation/Assignment 1/tex/core_3.tex
@@ -16,7 +16,7 @@ The classes that are considered less important are:
 	\item Wall
 \end{itemize}
 \\
-The GameOverController and WinController are important because they control the screen when you win or lose, But these classes are almost the same. They both create a screen with a Play Again and a Quit button. The only differences between these classes are the picture on the screen and the way they are called. The WinController wis called when all the monsters are killed, and the GameOverController when the character touches a monster. We have removed these two classes, and created one class new class: StartOrEndController. This controller creates a screen with the two buttons, with a different image when you win or lose.\\
+The GameOverController and WinController are important because they control the screen when you win or lose, But these classes are almost the same. They both create a screen with a Play Again and a Quit button. The only differences between these classes are the picture on the screen and the way they are called. The WinController is called when all the monsters are killed, and the GameOverController when the character touches a monster. We have removed these two classes, and created one class new class: StartOrEndController. This controller creates a screen with the two buttons, with a different image when you win or lose.\\
 \\
 The class Settings is a class that contains information about the game, like speed of monsters, bubbles and the player. This class makes the programming more clear.
 \\
@@ -24,4 +24,4 @@ The other classes are all extensions from SpriteBase. All these classes are nece
 The GravityObjects are all the object that can move in different directions in the level.\\
 The Walls are the objects that can't collide with other sprites.\\
 The bubbles are the bubbles that move in a specific direction, a few steps to the left or right and then they move up. These bubbles are shoot by a player and can catch the monsters.\\
-The classes Monster and Player are extensions from GravityObject. The difference between these classes is that the monsters move around freely, and the player moves around by key presses. At the moment is it possible to remove the class Monster, because there is only one extension from this class: Walker. Wich represent the monsters that walk around the field. But we won't remove the class Monster because in the future we may want to create different types of monster, for instance monsters that fly or can shoot.
+The classes Monster and Player are extensions from GravityObject. The difference between these classes is that the monsters move around freely, and the player moves around by key presses. At the moment is it possible to remove the class Monster, because there is only one extension from this class: Walker. Which represent the monsters that walk around the field. But we won't remove the class Monster because in the future we may want to create different types of monster, for instance monsters that fly or can shoot.
