Updated the assignment 1 file.

--- a/Documentation/Assignment 1/tex/core_2.tex
+++ b/Documentation/Assignment 1/tex/core_2.tex
@@ -1,3 +1,5 @@
+\chapter{The Core: Question 2}
+
 \subsection{Exercise 1.2}
 ``Following the Responsibility Driven Design, describe the main classes you implemented in your project in terms of responsibilities and collaborations''
 
