added exercise 1.4 (including the Class Diagram). Adapted exercise 1.1 and 1.2 to fit nicely into main.tex.

--- a/Documentation/Assignment 1/tex/core_2.tex
+++ b/Documentation/Assignment 1/tex/core_2.tex
@@ -1,9 +1,8 @@
 \chapter{The Core: Question 2}
 
-\subsection{Exercise 1.2}
 ``Following the Responsibility Driven Design, describe the main classes you implemented in your project in terms of responsibilities and collaborations''
 
-\subsection{Launcher}
+\subsubsection{Launcher}
 Responsibility: \\
 The Launcher launches the game by loading the StartorEndController. \\
 Collaborations: \\
