--- a/Documentation/Assignment 1/tex/core_2.tex
+++ b/Documentation/Assignment 1/tex/core_2.tex
@@ -16,9 +16,9 @@ The StartorEndController collaborates with LevelController toe load the Level wh
 
 \subsubsection{LevelController}
 Responsibilities: \\
-The LevelController-class is responsible for handling interaction between a Level and Players. It is also runs the gameLoop which renders the game every frame. Therefor it is also able to pause the game, win a game and go to a next Level. \\
+The LevelController-class is responsible for handling interaction between a Level and Spritebases. It is also runs the gameLoop which renders the game every frame. therefore it is also able to pause the game, win a game and go to a next Level. \\
 Collaborations: \\
-The LevelController-class collaborates with a Level and the Players.
+The LevelController-class collaborates with a Level and the SpriteBase.
 
 \subsubsection{ScreenController}
 Responsibilities: \\
@@ -28,7 +28,7 @@ The ScreenController works together with the LevelController as well as SpriteBa
 
 \subsubsection{Level}
 Responsibilities: \\
-The Level-class is responsible for constructing the level a customer plays. A level has to be created from loading a text-file in which is defined where to place the walls and the monsters. \\
+The Level-class is responsible for constructing the level a player plays. A level has to be created from loading a text-file in which is defined where to place the walls and the monsters. \\
 Collaborations: \\
 The Level-class collaborates with SpriteBase to display every element in the Level.  
 
@@ -36,13 +36,13 @@ The Level-class collaborates with SpriteBase to display every element in the Lev
 Responsibilities: \\
 Every element in Level has certain standard attributes such as an x,y coordinate, but also the speed in every direction and an image. All of these attributes are defined in SpriteBase. \\
 Collaborations: \\
-Depending on the kind of SpriteBase, the customer must be able to perform input. Therefor the SpriteBase collaborates with Input. 
+Depending on the kind of SpriteBase, the player must be able to perform input. therefore the SpriteBase collaborates with Input. 
 
 \subsubsection{Input}
 Responsibilities: \\
-The Input class catches all input performed by the customer. The class makes sure that when a customer presses one of the keys allowed the desired action is performed and when the key is released the action stops. \\
+The Input class catches all input performed by the player. The class makes sure that when a player presses one of the keys allowed the desired action is performed and when the key is released the action stops. \\
 Collaborations: \\
-The only object which can be moved by the customer is the Player class. Therefor this is the only class with which the Input class collaborates. 
+The only object which can be moved by the player is the Spritebase which has the property of being the played character. therefore this is the only class with which the Input class collaborates. 
 
 \subsubsection{Non-main classes}
-The classes GravityObject, Bubble, Wall, Monster, Player and Walker are all (direct or indirect) extensions of SpriteBase. Therefor they can be removed. Settings is a class with only static information and can therefor also be merged in a controller. 
+The classes GravityObject, Bubble, Wall, Monster, Player and Walker are all (direct or indirect) extensions of SpriteBase. therefore they can be removed. Settings is a class with only static information and can therefore also be merged in a controller. 
