--- a/Documentation/Assignment 1/tex/core_4.tex
+++ b/Documentation/Assignment 1/tex/core_4.tex
@@ -1,6 +1,6 @@
 \chapter{The Core: Question 4}
 
-``Draw the class diagram of the aforementioned main elements of your game (do not forget to use elements such as parametrized classes or association constrains, if necessary).''
+``Draw the class diagram of the aforementioned main elements of your game (do not forget to use elements such as parametrised classes or association constrains, if necessary).''
 
 \begin{figure}[h]
 \includegraphics[width=\textwidth]{classDiagramsMain}
