--- a/Documentation/Assignment 1/tex/uml_3.tex
+++ b/Documentation/Assignment 1/tex/uml_3.tex
@@ -1,1 +1,18 @@
 \chapter{UML in practice: Question 3}
+
+\begin{figure}[h]
+\includegraphics[width=\textwidth]{classDiagramsUML_3.jpg}
+\caption{The class diagram for the whole project.}
+\end{figure}
+
+\noindent The hierarchies that can be seen have been chosen to stop the code from becoming too complex, and to allow both the programmers and developers, as well as anyone who would be looking at the code to have a better understanding of how the code is set up. The hierarchies were also created in this way, to insure that no class would get too long.
+\\
+\noindent The following hierarchies can be seen in the class diagram:
+\begin{itemize}
+\itemsep0em 
+\item There is Polymorphism between SpriteBase (the super class) and its three sub classes GravityObject, Bubble and Wall.
+\item There is Polymorphism between GravityObject (the super class) and its two sub classes Monster and Player.
+\item There is Is-a between Monster (the super class) and its sub class Walker.\\
+\end{itemize} 
+
+\noindent The hierarchies work well because they aren't too complex and because they allow each of the components of the game to be created without having to rewrite code multiple times.     
