--- a/Documentation/Assignment 1/main.tex
+++ b/Documentation/Assignment 1/main.tex
@@ -22,6 +22,7 @@
 \usepackage{caption} 
 \usepackage{natbib}
 \usepackage[nottoc,numbib]{tocbibind}
+\usepackage{xpatch}
 
 \definecolor{dkgreen}{rgb}{0,0.6,0}
 \definecolor{gray}{rgb}{0.5,0.5,0.5}
@@ -51,6 +52,12 @@
   \href{#2}{#1}\footnote{\url{#2}}%
 }
 
+
+\xpatchcmd{\itemize}
+  {\def\makelabel}
+  {\setlength{\itemsep}{0em}\def\makelabel}
+  {}
+  {}
 
 \begin{document} 
 
