--- a/Documentation/Assignment 1/tex/core_4.tex
+++ b/Documentation/Assignment 1/tex/core_4.tex
@@ -1,4 +1,4 @@
-\chapter{The Core: Question 4}
+\section{Question 4}
 
 ``Draw the class diagram of the aforementioned main elements of your game (do not forget to use elements such as parametrised classes or association constrains, if necessary).''
 
