--- a/Documentation/Assignment 1/tex/logger_2.tex
+++ b/Documentation/Assignment 1/tex/logger_2.tex
@@ -1,1 +1,4 @@
-\chapter{Simple logging: Question 2}
+\section{Question 2}
+
+``During the analysis and design phases of this extension use responsibility driven design and UML
+(push to the repository a single PDF file including all the documents produced).''
