--- a/Documentation/Assignment 1/tex/uml_2.tex
+++ b/Documentation/Assignment 1/tex/uml_2.tex
@@ -1,4 +1,4 @@
-\chapter{UML in practice: Question 2}
+\section{Question 2}
 
 ``Is there any parametrized class in your source code? If so, describe which classes, why they are
 parametrized, and the benefits of the parametrization. If not, describe when and why you should use
