--- a/Documentation/Assignment 1/tex/uml_3.tex
+++ b/Documentation/Assignment 1/tex/uml_3.tex
@@ -1,4 +1,8 @@
-\chapter{UML in practice: Question 3}
+\section{Question 3}
+
+``Draw the class diagrams for all the hierarchies in your source code. Explain why you created these
+hierarchies and classify their type (e.g., “Is-a” and “Polymorphism”). Considering the lectures, are
+there hierarchies that should be removed? Explain and implement any necessary change.''
 
 \begin{figure}[h]
 \includegraphics[width=\textwidth]{classDiagramsUML_3.jpg}
