--- a/Documentation/Assignment 1/tex/core_2.tex
+++ b/Documentation/Assignment 1/tex/core_2.tex
@@ -1,4 +1,4 @@
-\chapter{The Core: Question 2}
+\section{Question 2}
 
 ``Following the Responsibility Driven Design, describe the main classes you implemented in your project in terms of responsibilities and collaborations''
 
