--- a/Documentation/Assignment 1/tex/core_5.tex
+++ b/Documentation/Assignment 1/tex/core_5.tex
@@ -1,4 +1,4 @@
-\chapter{The Core: Question 5}
+\section{Question 5}
 ``Draw the sequence diagram to describe how the main elements of your game interact (consider asynchrony and constraints, if necessary)''
 
 \begin{figure}[h]
