--- a/Documentation/Assignment 1/tex/uml_1.tex
+++ b/Documentation/Assignment 1/tex/uml_1.tex
@@ -1,4 +1,7 @@
-\chapter{UML in practice: Question 1}
+\chapter{UML in practice}
+\section{Question 1}
+``What is the difference between aggregation and composition? Where are composition and aggregation
+used in your project? Describe the classes and explain how these associations work.''
 
 The difference between aggregation and composition is that in composition class A owns class B (or contains). While in aggregation, class A uses class B (or consists of), so the classes are independent of each other. 
 \\\\
