--- a/Documentation/Logger requirements/tex/logger_non_functional.tex
+++ b/Documentation/Logger requirements/tex/logger_non_functional.tex
@@ -5,6 +5,7 @@ The non-functional requirements are the requirements that are based on the opera
 \begin{itemize}
 \itemsep0em
 	\item A working version of the logger must be delivered September 18th, 2015.
+	\item The logger must be compatible with the Bubble Bobble game that has been developed. 
 	\item The logger should be able to run on Windows (7 or higher), Mac OS X (10.8 and higher) and Linux.
 	\item The logger will be implemented in Java. 
 	\item The logger delivered will have at least 75\% line coverage in Cobertura, where the tests are meaningful. Meaningful means that they do not only execute functions, but actually test the game. 
